<?xml version="1.0"?>

<package format="2">
    <name>onrobot_description</name>
    <version>0.5.0</version>
    <description>The onrobot_description package</description>

    <maintainer email="igor.kalevatykh@inria.fr">Igor Kalevatykh</maintainer>
    <author email="igor.kalevatykh@inria.fr">Igor Kalevatykh</author>

    <license>MIT</license>

    <exec_depend>xacro</exec_depend>
    <buildtool_depend>ament_cmake</buildtool_depend>

    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>